--- a/index.html
+++ b/index.html
@@ -8,175 +8,208 @@
 </head>
 <body>
     <script>
-        var vapiInstance = null;
+        (function() {
+            var vapiInstance = null;
 
-        function getQueryParam(param) {
-            let urlParams = new URLSearchParams(window.location.search);
-            return urlParams.get(param);
-        }
-
-        // Retrieve parameters from the query string
-        const apiKey = getQueryParam('apiKey') || '<your_public_api_key>';
-        const assistant = getQueryParam('assistant') || '<assistant_id>';
-        const title = getQueryParam('title') || 'Have a quick question?';
-        const subtitle = getQueryParam('subtitle') || 'Talk with our AI assistant';
-        const parentOrigin = getQueryParam('parentOrigin') || window.location.origin;
-
-        console.log("Assistant: parentOrigin is", parentOrigin);
-
-        // Configure the button
-        const buttonConfig = {
-            position: "bottom-right",
-            offset: "40px",
-            width: "50px",
-            height: "50px",
-            idle: {
-                color: `rgb(93, 254, 202)`,
-                type: "pill",
-                title: title,
-                subtitle: subtitle,
-                icon: `https://unpkg.com/lucide-static@0.321.0/icons/phone.svg`,
-            },
-            loading: {
-                color: `rgb(93, 124, 202)`,
-                type: "pill",
-                title: "Connecting...",
-                subtitle: "Please wait",
-                icon: `https://unpkg.com/lucide-static@0.321.0/icons/loader-2.svg`,
-            },
-            active: {
-                color: `rgb(255, 0, 0)`,
-                type: "pill",
-                title: "Call is in progress...",
-                subtitle: "End the call.",
-                icon: `https://unpkg.com/lucide-static@0.321.0/icons/phone-off.svg`,
-            },
-        };
-
-        // Initialize the assistant when the SDK is loaded
-        window.addEventListener('load', function() {
-            if (window.vapiEventListenersAdded) {
-                return;
+            // Utility function to get query parameters
+            function getQueryParam(param) {
+                let urlParams = new URLSearchParams(window.location.search);
+                return urlParams.get(param);
             }
-            window.vapiEventListenersAdded = true;
 
-            try {
-                // Initialize vapiInstance using the web snippet approach
-                vapiInstance = window.vapiSDK.run({
-                    apiKey: apiKey, // Mandatory
-                    assistant: assistant, // Mandatory
-                    config: buttonConfig, // Optional
-                });
+            // Retrieve parameters from the query string
+            const apiKey = getQueryParam('apiKey') || '<your_public_api_key>';
+            const assistant = getQueryParam('assistant') || '<assistant_id>';
+            const title = getQueryParam('title') || 'Have a quick question?';
+            const subtitle = getQueryParam('subtitle') || 'Talk with our AI assistant';
+            const parentOrigin = getQueryParam('parentOrigin') || window.location.origin;
 
-                console.log("Assistant: vapiInstance created:", vapiInstance);
+            console.log("Assistant: parentOrigin is", parentOrigin);
 
-                // Event listeners for status updates
-                vapiInstance.on('call-start', () => {
-                    console.log('Assistant: Call has started');
-                    sendStatusToParent('call-started');
-                });
+            // Configure the button appearance and behavior
+            const buttonConfig = {
+                position: "bottom-right",
+                offset: "40px",
+                width: "50px",
+                height: "50px",
+                idle: {
+                    color: `rgb(93, 254, 202)`,
+                    type: "pill",
+                    title: title,
+                    subtitle: subtitle,
+                    icon: `https://unpkg.com/lucide-static@0.321.0/icons/phone.svg`,
+                },
+                loading: {
+                    color: `rgb(93, 124, 202)`,
+                    type: "pill",
+                    title: "Connecting...",
+                    subtitle: "Please wait",
+                    icon: `https://unpkg.com/lucide-static@0.321.0/icons/loader-2.svg`,
+                },
+                active: {
+                    color: `rgb(255, 0, 0)`,
+                    type: "pill",
+                    title: "Call is in progress...",
+                    subtitle: "End the call.",
+                    icon: `https://unpkg.com/lucide-static@0.321.0/icons/phone-off.svg`,
+                },
+            };
 
-                vapiInstance.on('call-end', () => {
-                    console.log('Assistant: Call has ended');
-                    sendStatusToParent('call-ended');
-                });
+            // Function to send structured status updates
+            function sendStatusToParent(status, details = {}) {
+                const message = {
+                    type: 'status_update',
+                    status: status,
+                    details: details
+                };
+                console.log("Assistant: Sending status update:", message);
+                window.parent.postMessage(message, parentOrigin);
+            }
 
-                vapiInstance.on('speech-start', () => {
-                    console.log('Assistant: Assistant has started speaking');
-                    sendStatusToParent('assistant-talking');
-                });
+            // Function to send transcription messages
+            function sendTranscriptionToParent(transcription, role) {
+                const message = {
+                    type: 'transcription',
+                    data: {
+                        transcription: transcription,
+                        role: role,
+                        timestamp: new Date().toISOString()
+                    }
+                };
+                console.log("Assistant: Sending transcription:", message);
+                window.parent.postMessage(message, parentOrigin);
+            }
 
-                vapiInstance.on('speech-end', () => {
-                    console.log('Assistant: Assistant has finished speaking');
-                    sendStatusToParent('assistant-waiting');
-                });
+            // Function to send heartbeat messages
+            function sendHeartbeat() {
+                const heartbeatMessage = {
+                    type: 'heartbeat',
+                    status: 'active',
+                    timestamp: new Date().toISOString()
+                };
+                console.log("Assistant: Sending heartbeat:", heartbeatMessage);
+                window.parent.postMessage(heartbeatMessage, parentOrigin);
+            }
 
-                vapiInstance.on('error', (e) => {
-                    console.error("Assistant: Error:", e);
-                    window.parent.postMessage({
-                        type: 'error',
-                        data: e.message || e
-                    }, parentOrigin);
-                });
+            // Initialize the assistant when the SDK is loaded
+            window.addEventListener('load', function() {
+                if (window.vapiEventListenersAdded) {
+                    return;
+                }
+                window.vapiEventListenersAdded = true;
 
-                // Add the transcription message listener
-                vapiInstance.on('message', (message) => {
-                    console.log("Assistant: Received message:", message);
+                try {
+                    // Initialize vapiInstance using the Vapi SDK
+                    vapiInstance = window.vapiSDK.run({
+                        apiKey: apiKey, // Mandatory
+                        assistant: assistant, // Mandatory
+                        config: buttonConfig, // Optional
+                    });
 
-                    if (message.type === 'transcript' && message.transcriptType === 'final') {
-                        let transcription = message.transcript;
-                        let role = message.role; // 'user' or 'assistant'
+                    console.log("Assistant: vapiInstance created:", vapiInstance);
 
-                        console.log("Assistant: Sending transcription:", transcription, "Role:", role);
+                    // Event listeners for status updates
+                    vapiInstance.on('call-start', () => {
+                        console.log('Assistant: Call has started');
+                        sendStatusToParent('call-started', { timestamp: new Date().toISOString() });
+                    });
 
-                        // Send the transcription and role to the parent window
+                    vapiInstance.on('call-end', () => {
+                        console.log('Assistant: Call has ended');
+                        sendStatusToParent('call-ended', { timestamp: new Date().toISOString() });
+                    });
+
+                    vapiInstance.on('speech-start', () => {
+                        console.log('Assistant: Assistant has started speaking');
+                        sendStatusToParent('assistant-talking', { timestamp: new Date().toISOString() });
+                    });
+
+                    vapiInstance.on('speech-end', () => {
+                        console.log('Assistant: Assistant has finished speaking');
+                        sendStatusToParent('assistant-waiting', { timestamp: new Date().toISOString() });
+                    });
+
+                    vapiInstance.on('error', (e) => {
+                        console.error("Assistant: Error:", e);
                         window.parent.postMessage({
-                            type: 'transcription',
-                            data: {
-                                transcription: transcription,
-                                role: role
-                            }
+                            type: 'error',
+                            data: e.message || e
                         }, parentOrigin);
-                    } else {
-                        console.log("Assistant: Message type is not 'transcript' or not 'final'");
-                    }
-                });
+                    });
 
-                // Event listener for messages from the parent window
-                window.addEventListener('message', function(event) {
-                    // Ignore messages from the assistant's own origin
-                    if (event.origin === window.location.origin) {
-                        return;
-                    }
+                    // Transcription message listener
+                    vapiInstance.on('message', (message) => {
+                        console.log("Assistant: Received message:", message);
 
-                    if (event.origin !== parentOrigin) {
-                        console.warn("Assistant: Received message from unknown origin:", event.origin);
-                        return;
-                    }
+                        if (message.type === 'transcript' && message.transcriptType === 'final') {
+                            let transcription = message.transcript;
+                            let role = message.role; // 'user' or 'assistant'
 
-                    var data = event.data;
-                    if (typeof data === 'object' && data !== null) {
-                        if (data.type === 'start_conversation') {
-                            console.log("Assistant: Starting conversation");
-                            simulateButtonClick('start');
-                        } else if (data.type === 'stop_conversation') {
-                            console.log("Assistant: Stopping conversation");
-                            simulateButtonClick('stop');
+                            console.log("Assistant: Sending transcription:", transcription, "Role:", role);
+
+                            sendTranscriptionToParent(transcription, role);
+                        } else {
+                            console.log("Assistant: Message type is not 'transcript' or not 'final'");
+                        }
+                    });
+
+                    // Event listener for messages from the parent window
+                    window.addEventListener('message', function(event) {
+                        // Ignore messages from the assistant's own origin
+                        if (event.origin === window.location.origin) {
+                            return;
+                        }
+
+                        if (event.origin !== parentOrigin) {
+                            console.warn("Assistant: Received message from unknown origin:", event.origin);
+                            return;
+                        }
+
+                        var data = event.data;
+                        if (typeof data === 'object' && data !== null) {
+                            if (data.type === 'start_conversation') {
+                                console.log("Assistant: Starting conversation");
+                                simulateButtonClick('start');
+                            } else if (data.type === 'stop_conversation') {
+                                console.log("Assistant: Stopping conversation");
+                                simulateButtonClick('stop');
+                            }
+                        }
+                    });
+
+                    // Function to simulate a click on the assistant button
+                    function simulateButtonClick(action) {
+                        var assistantButton = document.querySelector('button[class*="vapi-btn"]');
+                        if (assistantButton) {
+                            if (action === 'start') {
+                                console.log("Assistant: Call is loading");
+                                sendStatusToParent('call-loading', { timestamp: new Date().toISOString() });
+                            }
+                            assistantButton.click();
+                            console.log("Assistant: Button clicked to " + action + " conversation");
+                        } else {
+                            console.warn("Assistant: Button not found, retrying in 500ms...");
+                            setTimeout(function() {
+                                simulateButtonClick(action);
+                            }, 500);
                         }
                     }
-                });
 
-                // Function to send status updates to the parent window
-                function sendStatusToParent(status) {
-                    console.log("Assistant: Sending status to parent:", status);
+                    // Send an immediate heartbeat upon initialization
+                    sendHeartbeat();
+
+                    // Send heartbeat every 30 seconds
+                    setInterval(sendHeartbeat, 30000);
+
+                } catch (error) {
+                    console.error("Assistant: Error during initialization:", error);
                     window.parent.postMessage({
-                        type: 'status',
-                        data: status
+                        type: 'error',
+                        data: error.message || error
                     }, parentOrigin);
                 }
-
-                // Function to simulate a click on the assistant button
-                function simulateButtonClick(action) {
-                    var assistantButton = document.querySelector('button[class*="vapi-btn"]');
-                    if (assistantButton) {
-                        assistantButton.click();
-                        console.log("Assistant: Button clicked to " + action + " conversation");
-                    } else {
-                        console.warn("Assistant: Button not found, retrying in 500ms...");
-                        setTimeout(function() {
-                            simulateButtonClick(action);
-                        }, 500);
-                    }
-                }
-
-            } catch (error) {
-                console.error("Assistant: Error during initialization:", error);
-                window.parent.postMessage({
-                    type: 'error',
-                    data: error.message || error
-                }, parentOrigin);
-            }
-        });
+            });
+        })();
     </script>
 </body>
 </html>
